--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,5 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -name: check out repository code
-       uses: actions/checkout@v3
+       uses: actions/checkout
       -run: echo "$(cat hello_world.txt)"
